--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,22 +4,35 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"
+            android:label = "Main Menu"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".LoanActivity" />
-        <activity android:name=".LivingExpensesActivity" />
-        <activity android:name=".InformationActivity"></activity>
+        <activity android:name=".ProfileActivity"
+            android:label = "Profile Information"
+            />
+
+        <activity android:name=".LoanActivity"
+            android:label = "Loan Information"/>
+
+        <activity android:name=".LivingExpensesActivity"
+            android:label = "Living Expenses Information"/>
+
+        <activity android:name=".InformationActivity"
+            android:label = "Information"
+            ></activity>
     </application>
 
 </manifest>
